no progress in crash, rolling back to provided function

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -359,7 +359,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "4331b1f2-f888-4133-a120-89e87c200afa",
+       "ref": "d1145f8a-d78a-44c1-9128-79d6f4c4351f",
        "rows": [
         [
          "P186",
@@ -774,7 +774,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e823036f-ccd2-4261-9af0-17e8be2788b5",
+       "ref": "7c7e57ba-c679-4eac-913a-2b25c8578789",
        "rows": [
         [
          "P186",
@@ -1152,7 +1152,7 @@
          "type": "float"
         }
        ],
-       "ref": "99eaa8c7-51c0-4172-b71f-7a8652908b93",
+       "ref": "f86572e3-24f0-4386-bc39-ef7c68743fbe",
        "rows": [
         [
          "P186",
@@ -2534,7 +2534,7 @@
          "type": "float"
         }
        ],
-       "ref": "b73b4f77-355c-4960-9e91-55b399c79983",
+       "ref": "54507f30-ad77-4e0b-96ce-686cfdb32098",
        "rows": [
         [
          "P186",
@@ -4081,7 +4081,7 @@
          "type": "float"
         }
        ],
-       "ref": "75ca0960-6436-4d1c-b8bd-5273df9c8225",
+       "ref": "3fa3b10b-1eb1-4d6b-a519-33c74161f3af",
        "rows": [
         [
          "P186",
@@ -5529,7 +5529,7 @@
          "type": "string"
         }
        ],
-       "ref": "085a5c4e-df62-45cc-9f5f-8ed69748f50c",
+       "ref": "12ed3866-8c57-4a6d-be13-ba6f3b303250",
        "rows": [
         [
          "0",
@@ -6114,7 +6114,7 @@
          "type": "string"
         }
        ],
-       "ref": "e5ac34c1-fee6-446e-ae60-27f5fd3981f7",
+       "ref": "2da351f2-2b56-475b-a805-079a9f7c87ef",
        "rows": [
         [
          "0",
@@ -6668,8 +6668,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'LVOTSUBVALVULAR', 'COMMISSURE', 'RCC', 'LCC', 'RVOTFREEWALL', 'SUMMIT', 'RVOTSEPTUM'}\n",
-      "Subregions in sheet 2: {'LVOTSUBVALVULAR', 'LVOTSUMMIT', 'COMMISURE', 'RCC', 'LCC', 'RVOTFREEWALL', 'RVOTSEPTUM'}\n"
+      "Subregions in sheet 1: {'RVOTFREEWALL', 'SUMMIT', 'RVOTSEPTUM', 'RCC', 'LVOTSUBVALVULAR', 'COMMISSURE', 'LCC'}\n",
+      "Subregions in sheet 2: {'RVOTFREEWALL', 'RVOTSEPTUM', 'RCC', 'LVOTSUBVALVULAR', 'LVOTSUMMIT', 'COMMISURE', 'LCC'}\n"
      ]
     }
    ],
@@ -6917,7 +6917,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "bc52ed4a-3661-41a5-8a47-4397c5b5e69b",
+       "ref": "3eac656f-7366-4ba8-b249-fccd1bd28c50",
        "rows": [
         [
          "P186",
@@ -8004,7 +8004,7 @@
          "type": "float"
         }
        ],
-       "ref": "297beb08-f823-420c-b6db-1c9ea69ae11e",
+       "ref": "5b6176ad-a7af-46f9-91d9-5d199171df78",
        "rows": [
         [
          "P186",
@@ -9114,7 +9114,7 @@
          "type": "string"
         }
        ],
-       "ref": "f792489d-67e2-4a9e-9a05-4f8fa6921ecf",
+       "ref": "0eb0fe86-fe3b-4ba1-af84-91753a4abe0d",
        "rows": [
         [
          "P173",
@@ -9269,7 +9269,7 @@
          "type": "string"
         }
        ],
-       "ref": "1295c8c5-358b-4fa8-a3fe-ee70ef66288f",
+       "ref": "eb7bd925-2176-4f7c-a890-6d79c5fbf723",
        "rows": [
         [
          "P186",
@@ -9500,7 +9500,7 @@
          "type": "string"
         }
        ],
-       "ref": "8dc6528d-69d5-43e3-9a58-e360fdabb6b9",
+       "ref": "00a1aa58-2aab-43f5-a962-61f7388ae262",
        "rows": [
         [
          "P172",
@@ -9743,7 +9743,7 @@
          "type": "string"
         }
        ],
-       "ref": "4bdbf405-31a4-4e35-b0dd-47659b90bb3c",
+       "ref": "6aa9102d-6c9e-43fb-b9d5-83da84773bd9",
        "rows": [
         [
          "P290",
@@ -9900,7 +9900,7 @@
          "type": "string"
         }
        ],
-       "ref": "98223b15-ec2a-41d6-ad02-63cf621c1134",
+       "ref": "a17a3729-3d6a-494e-87a8-b1e79e4fa341",
        "rows": [
         [
          "P285",
@@ -10163,7 +10163,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a31eff6b-11de-42fc-ac80-c7e16aa69545",
+       "ref": "2d88b09f-f7d5-4935-ab55-777f433c91cd",
        "rows": [
         [
          "P245",
@@ -10622,7 +10622,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "c145080a-0534-4097-814e-81904434cdc7",
+       "ref": "f5d11aaa-899e-47a2-baf9-7995ab3042ab",
        "rows": [
         [
          "P186",
@@ -11036,7 +11036,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "8040b746-5ea0-4d4a-b413-31c247c8c7f4",
+       "ref": "ce303f24-fcc1-449f-aa4c-d1bfd9f8f136",
        "rows": [
         [
          "P172",
@@ -11571,7 +11571,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d5211c4c-eb07-4a77-9397-1c497b438ed7",
+       "ref": "df4b8abe-4df7-4b9c-ac68-6607627b2be4",
        "rows": [
         [
          "0",
@@ -12256,7 +12256,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "c02b4769-6797-4c8b-8eb0-d178c3f8d08c",
+       "ref": "571fd7cd-1177-4976-9618-062f478cd43a",
        "rows": [
         [
          "0",
@@ -13145,92 +13145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "c83c70e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_ecg_for_segmentation_simple(ecg_250, models_ECG=None):\n",
-    "    \"\"\"Simplified version of the segmentation function to diagnose issues.\"\"\"\n",
-    "    try:\n",
-    "        # Print basic info\n",
-    "        print(f\"Input ECG shape: {ecg_250.shape}\")\n",
-    "        if models_ECG is None:\n",
-    "            # Use global variable if not provided\n",
-    "            print(f\"Using global models, count: {len(models_ECG)}\")\n",
-    "        \n",
-    "        # Check first model properties\n",
-    "        model = models_ECG[0]\n",
-    "        print(f\"Model type: {type(model)}\")\n",
-    "        print(f\"Model on device: {next(model.parameters()).device}\")\n",
-    "        \n",
-    "        # Basic preprocessing - reshape for model\n",
-    "        input_signal = np.expand_dims(ecg_250, axis=0)           # Add batch dimension\n",
-    "        input_signal = np.swapaxes(input_signal, 1, 2)           # Swap to get leads as channels\n",
-    "        print(f\"Processed signal shape: {input_signal.shape}\")\n",
-    "        \n",
-    "        # Convert to tensor\n",
-    "        input_tensor = torch.tensor(input_signal, dtype=torch.float32)\n",
-    "        print(f\"Input tensor shape: {input_tensor.shape}, device: {input_tensor.device}\")\n",
-    "        \n",
-    "        # Try simple forward pass with only first model\n",
-    "        print(\"Attempting inference with first model only...\")\n",
-    "        model = model.to(\"cpu\")\n",
-    "        model.eval()\n",
-    "        \n",
-    "        # Create inputs dictionary - the most basic form\n",
-    "        inputs = {\"x\": input_tensor}\n",
-    "        \n",
-    "        # Perform inference\n",
-    "        with torch.no_grad():\n",
-    "            outputs = model(inputs)\n",
-    "            print(\"Forward pass successful!\")\n",
-    "            print(f\"Output keys: {list(outputs.keys())}\")\n",
-    "            \n",
-    "            # If we got this far, try to extract probabilities\n",
-    "            if \"sigmoid\" in outputs:\n",
-    "                probs = outputs[\"sigmoid\"].cpu().detach().numpy()\n",
-    "                print(f\"Sigmoid output shape: {probs.shape}\")\n",
-    "                \n",
-    "                # Create a basic segmentation\n",
-    "                segmentation = probs > 0.9\n",
-    "                print(f\"Segmentation shape: {segmentation.shape}\")\n",
-    "                return segmentation[0]  # Remove batch dimension\n",
-    "            else:\n",
-    "                print(\"No 'sigmoid' key in model outputs\")\n",
-    "                return None\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {str(e)}\")\n",
-    "        import traceback\n",
-    "        traceback.print_exc()\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "ff42f863",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of models: 5\n",
-      "Type of models_ECG: <class 'list'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Number of models: {len(models_ECG)}\")\n",
-    "print(f\"Type of models_ECG: {type(models_ECG)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "6729636b",
    "metadata": {},
    "outputs": [
     {
@@ -13246,7 +13162,81 @@
     }
    ],
    "source": [
-    "segmentation = process_ecg_for_segmentation_simple(test_ecg_2048, models_ECG)"
+    "def minimal_model_inference(ecg_2048, model):\n",
+    "    \"\"\"Absolute minimal version focusing just on model inference pattern from signal_data.ipynb\"\"\"\n",
+    "    try:\n",
+    "        print(\"Starting minimal function\")\n",
+    "        \n",
+    "        # Input ECG shape should be (2048, 12)\n",
+    "        print(f\"Input ECG shape: {ecg_2048.shape}\")\n",
+    "        \n",
+    "        # 1. Add batch dimension - shape becomes (1, 2048, 12)\n",
+    "        input_signal = np.expand_dims(ecg_2048, axis=0)\n",
+    "        print(\"Added batch dimension\")\n",
+    "        \n",
+    "        # 2. Swap axes to get leads as channels - shape becomes (1, 12, 2048)\n",
+    "        input_signal = np.swapaxes(input_signal, 1, 2)\n",
+    "        print(f\"Swapped dimensions, shape: {input_signal.shape}\")\n",
+    "        \n",
+    "        # 3. Convert to tensor\n",
+    "        input_tensor = torch.tensor(input_signal, dtype=torch.float32)\n",
+    "        print(f\"Created tensor, shape: {input_tensor.shape}\")\n",
+    "        \n",
+    "        # 4. Get model info\n",
+    "        print(f\"Model type: {type(model)}\")\n",
+    "        \n",
+    "        # 5. Create input dictionary (this appears to be the key difference!)\n",
+    "        inputs = {\"x\": input_tensor}\n",
+    "        \n",
+    "        # 6. Run inference\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            output = model(inputs)\n",
+    "        \n",
+    "        print(f\"Inference successful: {type(output)}\")\n",
+    "        return output\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {str(e)}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "899b8ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test with the first model\n",
+    "if models_ECG and len(models_ECG) > 0:\n",
+    "    print(f\"Testing model: {type(models_ECG[0])}\")\n",
+    "    result = minimal_model_inference(test_ecg_2048, models_ECG[0])\n",
+    "    print(f\"Result: {'Success' if result is not None else 'Failed'}\")\n",
+    "    \n",
+    "    # If successful, inspect the output structure\n",
+    "    if result is not None:\n",
+    "        print(f\"Output type: {type(result)}\")\n",
+    "        # If result is a dictionary, show its keys\n",
+    "        if isinstance(result, dict):\n",
+    "            print(f\"Output keys: {result.keys()}\")\n",
+    "            if \"sigmoid\" in result:\n",
+    "                print(f\"Sigmoid output shape: {result['sigmoid'].shape}\")\n",
+    "else:\n",
+    "    print(\"No models available to test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff42f863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Number of models: {len(models_ECG)}\")\n",
+    "print(f\"Type of models_ECG: {type(models_ECG)}\")"
    ]
   },
   {
@@ -13254,18 +13244,7 @@
    "execution_count": null,
    "id": "6a7b9f40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" import matplotlib.pyplot as plt\\nfig, ax = plt.subplots(4,3)\\nrow = 0\\ncol = 0\\nx = np.linspace(0,2.5,int(fs*2.5))\\nfor i,sig in enumerate(ecg_signals1.T):\\n    ax[row,col].plot(x, sig)\\n    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[0,:] == 1), color='C0', alpha = 0.3 )\\n    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[1,:] == 1), color='C1', alpha = 0.3 )\\n    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[2,:] == 1), color='C2', alpha = 0.3 )\\n    col += 1\\n    if col >= 3:\\n        row += 1\\n        col = 0\\n    plt.plot() \""
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# CODE TO PLOT A SEGMENTED FULL ECG SIGNAL (12 LEADS PLOT)\n",
