Small print added

--- a/dimentinoality_reduction.ipynb
+++ b/dimentinoality_reduction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "03d567d2",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1549,7 @@
          "type": "float"
         }
        ],
-       "ref": "6fcc703d-4136-4d59-ad02-313c951a89ca",
+       "ref": "a85e7398-ff55-43e6-96f4-3492e79fa503",
        "rows": [
         [
          "0",
@@ -3302,7 +3302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "0fbdd1b8",
    "metadata": {},
    "outputs": [
@@ -3436,7 +3436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5abee9c3",
    "metadata": {},
    "outputs": [
@@ -3562,7 +3562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "85908135",
    "metadata": {},
    "outputs": [
@@ -3585,17 +3585,7 @@
     "from sklearn.decomposition import SparsePCA\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# Recreate fictional ECG dataset\n",
-    "np.random.seed(42)\n",
-    "n_samples, n_features = 200, 300\n",
-    "X = np.random.randn(n_samples, n_features)\n",
     "\n",
-    "# Fit SparsePCA\n",
-    "spca = SparsePCA(n_components=10, alpha=1.0, random_state=42)\n",
-    "spca.fit(X)\n",
-    "\n",
-    "# Transform and reconstruct\n",
-    "X_sp = spca.transform(X)\n",
     "X_recon = np.dot(X_sp, spca.components_)\n",
     "\n",
     "# Compute variance and error metrics\n",
@@ -3625,7 +3615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "31b4cc36",
    "metadata": {},
    "outputs": [
@@ -3634,34 +3624,34 @@
      "output_type": "stream",
      "text": [
       "PC1_rot top features:\n",
-      " feat_235    0.230701\n",
-      "feat_274    0.190804\n",
-      "feat_2      0.145884\n",
-      "feat_19     0.125814\n",
-      "feat_276    0.125364\n",
-      "feat_152    0.122984\n",
-      "feat_181    0.122902\n",
-      "feat_200    0.122578\n",
+      " feat_160    0.611958\n",
+      "feat_194    0.163164\n",
+      "feat_166    0.155095\n",
+      "feat_175    0.152752\n",
+      "feat_87     0.136912\n",
+      "feat_42     0.124962\n",
+      "feat_182    0.124229\n",
+      "feat_262    0.121628\n",
       "Name: PC1_rot, dtype: float64\n",
       "PC2_rot top features:\n",
-      " feat_225    0.211978\n",
-      "feat_9      0.183862\n",
-      "feat_80     0.173413\n",
-      "feat_296    0.167578\n",
-      "feat_205    0.164814\n",
-      "feat_288    0.152609\n",
-      "feat_176    0.152045\n",
-      "feat_257    0.148619\n",
+      " feat_80     0.657233\n",
+      "feat_59     0.147627\n",
+      "feat_49     0.140667\n",
+      "feat_83     0.136933\n",
+      "feat_277    0.124374\n",
+      "feat_116    0.121086\n",
+      "feat_12     0.117473\n",
+      "feat_276    0.116194\n",
       "Name: PC2_rot, dtype: float64\n",
       "PC3_rot top features:\n",
-      " feat_135    0.234151\n",
-      "feat_253    0.201227\n",
-      "feat_111    0.191371\n",
-      "feat_212    0.145988\n",
-      "feat_226    0.134332\n",
-      "feat_149    0.128340\n",
-      "feat_39     0.127894\n",
-      "feat_42     0.126992\n",
+      " feat_108    0.653636\n",
+      "feat_277    0.181869\n",
+      "feat_247    0.136170\n",
+      "feat_239    0.123922\n",
+      "feat_232    0.117709\n",
+      "feat_186    0.111421\n",
+      "feat_71     0.110252\n",
+      "feat_121    0.107989\n",
       "Name: PC3_rot, dtype: float64\n"
      ]
     }
@@ -3671,7 +3661,7 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "# 4a) Dense PCA\n",
-    "pca = PCA(n_components=10, random_state=42)\n",
+    "pca = PCA(n_components=0.95, random_state=42)\n",
     "X_pca = pca.fit_transform(df_X.values)\n",
     "loadings = pca.components_\n",
     "\n",
@@ -3705,6 +3695,41 @@
     "for comp in df_load_rot.index[:3]:\n",
     "    top_feats = df_load_rot.loc[comp].abs().nlargest(8)\n",
     "    print(f\"{comp} top features:\\n\", top_feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5af7c726",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparsePCA Reconstruction Metrics\n",
+      "---------------------------------\n",
+      "Total original variance     : 299.4894\n",
+      "Total reconstructed variance: 284.8177\n",
+      "Variance ratio (recon/orig) : 0.9510\n",
+      "Number of components after rotation: 144\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_rot = X @ rot_load.T  \n",
+    "# Compute variance and error metrics\n",
+    "var_orig = np.var(X, axis=0).sum()\n",
+    "var_rot = np.var(X_rot, axis=0).sum()\n",
+    "variance_ratio = var_rot / var_orig\n",
+    "\n",
+    "# Print results\n",
+    "print(\"SparsePCA Reconstruction Metrics\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(f\"Total original variance     : {var_orig:.4f}\")\n",
+    "print(f\"Total reconstructed variance: {var_rot:.4f}\")\n",
+    "print(f\"Variance ratio (recon/orig) : {variance_ratio:.4f}\")\n",
+    "print(f\"Number of components after rotation: {rot_load.shape[0]}\")"
    ]
   }
  ],
