Sparse different combinations

--- a/dimentinoality_reduction.ipynb
+++ b/dimentinoality_reduction.ipynb
@@ -3604,6 +3604,362 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "28eeef04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PC_0 top loadings:\n",
+      "feat_275    0.889507\n",
+      "feat_278    0.329354\n",
+      "feat_168    0.170178\n",
+      "feat_223    0.159581\n",
+      "feat_185    0.123133\n",
+      "feat_271    0.104299\n",
+      "feat_110    0.071203\n",
+      "feat_81     0.060540\n",
+      "Name: PC_0, dtype: float64\n",
+      "\n",
+      "PC_1 top loadings:\n",
+      "feat_80     0.869353\n",
+      "feat_59     0.372467\n",
+      "feat_90     0.188455\n",
+      "feat_197    0.151826\n",
+      "feat_85     0.103813\n",
+      "feat_203    0.101116\n",
+      "feat_276    0.091121\n",
+      "feat_17     0.083481\n",
+      "Name: PC_1, dtype: float64\n",
+      "\n",
+      "PC_2 top loadings:\n",
+      "feat_130    0.921127\n",
+      "feat_173    0.219842\n",
+      "feat_223    0.184297\n",
+      "feat_234    0.164788\n",
+      "feat_203    0.100203\n",
+      "feat_79     0.095504\n",
+      "feat_45     0.080673\n",
+      "feat_284    0.073856\n",
+      "Name: PC_2, dtype: float64\n",
+      "\n",
+      "PC_3 top loadings:\n",
+      "feat_40     0.655048\n",
+      "feat_135    0.409167\n",
+      "feat_186    0.332556\n",
+      "feat_86     0.294045\n",
+      "feat_210    0.287439\n",
+      "feat_68     0.173027\n",
+      "feat_157    0.159617\n",
+      "feat_276    0.139445\n",
+      "Name: PC_3, dtype: float64\n",
+      "\n",
+      "PC_4 top loadings:\n",
+      "feat_291    0.864032\n",
+      "feat_140    0.297389\n",
+      "feat_186    0.242618\n",
+      "feat_21     0.184103\n",
+      "feat_63     0.156757\n",
+      "feat_277    0.128035\n",
+      "feat_256    0.098607\n",
+      "feat_151    0.077897\n",
+      "Name: PC_4, dtype: float64\n",
+      "\n",
+      "Transformed data (first 5 rows):\n",
+      "       PC_0      PC_1      PC_2      PC_3      PC_4      PC_5      PC_6  \\\n",
+      "0  0.785230  0.711524 -2.350450 -1.023286 -0.347089  0.860405  0.939987   \n",
+      "1 -2.754270  0.639404 -1.400657  0.096410 -1.126149 -1.370989  0.699286   \n",
+      "2  2.269186 -1.002395 -0.005308  1.508762  1.384466  0.180582 -0.245474   \n",
+      "3 -0.655898 -0.647100  0.085355  0.882325 -1.546659 -0.557589  0.190749   \n",
+      "4  1.143042 -0.568717  1.365789  0.371389  2.718023  0.950139 -0.378663   \n",
+      "\n",
+      "       PC_7      PC_8      PC_9  ...    PC_134    PC_135    PC_136    PC_137  \\\n",
+      "0  1.482493 -0.159337 -0.540801  ...  1.441237 -0.936577 -0.242979 -0.868198   \n",
+      "1  2.166716 -0.688177 -1.492842  ... -0.678521  0.258110  0.238373 -0.015313   \n",
+      "2 -0.075837  0.502168 -0.959049  ...  0.622318  0.613141  0.509917  0.989434   \n",
+      "3  0.507353  0.608149 -1.598544  ...  1.105760 -2.606990 -1.209384 -0.555783   \n",
+      "4  0.667796 -2.406286 -1.870545  ... -0.186789 -1.323140 -0.196962 -1.229889   \n",
+      "\n",
+      "     PC_138    PC_139    PC_140    PC_141    PC_142    PC_143  \n",
+      "0  2.258772 -0.022171 -1.563711 -0.457418 -0.205481 -0.220108  \n",
+      "1  1.736863 -0.041859  0.250633  0.263025 -0.879731 -0.936423  \n",
+      "2 -0.074854 -1.297334 -1.384363 -1.818455 -1.183957  0.426589  \n",
+      "3 -1.521567 -0.111219  1.080186 -0.332043 -1.640099  0.046481  \n",
+      "4  0.682668  0.574921  0.859612 -1.588050 -0.507973 -0.007292  \n",
+      "\n",
+      "[5 rows x 144 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import SparsePCA\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Recreate (or assume you already have) df_X\n",
+    "np.random.seed(42)\n",
+    "n_samples, n_features = 200, 300\n",
+    "X = np.random.randn(n_samples, n_features)\n",
+    "df_X = pd.DataFrame(X, columns=[f'feat_{i}' for i in range(n_features)])\n",
+    "\n",
+    "# 1) Fit SparsePCA without normalize_components\n",
+    "spca = SparsePCA(\n",
+    "    n_components=144,   # number of sparse principal components\n",
+    "    alpha=1.0,         # sparsity penalty (higher → sparser loadings)\n",
+    "    random_state=42,\n",
+    ")\n",
+    "spca.fit(df_X.values)\n",
+    "\n",
+    "# 2) Extract component loadings into a DataFrame\n",
+    "components = pd.DataFrame(\n",
+    "    spca.components_,\n",
+    "    columns=df_X.columns,\n",
+    "    index=[f'PC_{i}' for i in range(144)]\n",
+    ")\n",
+    "\n",
+    "# Print top-8 features (by absolute loading) for the first 5 PCs\n",
+    "for pc in components.index[:5]:\n",
+    "    top_feats = components.loc[pc].abs().sort_values(ascending=False).head(8)\n",
+    "    print(f\"\\n{pc} top loadings:\")\n",
+    "    print(top_feats)\n",
+    "\n",
+    "# 3) Transform the data into the 144-dimensional sparse-PC space\n",
+    "X_sp = spca.transform(df_X.values)\n",
+    "df_X_sp = pd.DataFrame(\n",
+    "    X_sp,\n",
+    "    columns=[f'PC_{i}' for i in range(144)]\n",
+    ")\n",
+    "\n",
+    "print(\"\\nTransformed data (first 5 rows):\")\n",
+    "print(df_X_sp.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7acc1e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparsePCA Reconstruction Metrics\n",
+      "---------------------------------\n",
+      "Total original variance     : 299.4894\n",
+      "Total reconstructed variance: 222.0513\n",
+      "Variance ratio (recon/orig) : 0.7414\n",
+      "Mean Squared Error          : 0.2476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.decomposition import SparsePCA\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "X_recon = np.dot(X_sp, spca.components_)\n",
+    "\n",
+    "# Compute variance and error metrics\n",
+    "var_orig = np.var(X, axis=0).sum()\n",
+    "var_recon = np.var(X_recon, axis=0).sum()\n",
+    "variance_ratio = var_recon / var_orig\n",
+    "mse = mean_squared_error(X, X_recon)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"SparsePCA Reconstruction Metrics\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(f\"Total original variance     : {var_orig:.4f}\")\n",
+    "print(f\"Total reconstructed variance: {var_recon:.4f}\")\n",
+    "print(f\"Variance ratio (recon/orig) : {variance_ratio:.4f}\")\n",
+    "print(f\"Mean Squared Error          : {mse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "57f0ba93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PC_0 top loadings:\n",
+      "feat_160    0.514898\n",
+      "feat_194    0.388811\n",
+      "feat_182    0.292575\n",
+      "feat_111    0.283579\n",
+      "feat_114    0.246232\n",
+      "feat_159    0.242277\n",
+      "feat_157    0.218672\n",
+      "feat_219    0.204914\n",
+      "Name: PC_0, dtype: float64\n",
+      "\n",
+      "PC_1 top loadings:\n",
+      "feat_132    0.527078\n",
+      "feat_43     0.342581\n",
+      "feat_104    0.315096\n",
+      "feat_246    0.278335\n",
+      "feat_153    0.245852\n",
+      "feat_26     0.183725\n",
+      "feat_195    0.161752\n",
+      "feat_22     0.159320\n",
+      "Name: PC_1, dtype: float64\n",
+      "\n",
+      "PC_2 top loadings:\n",
+      "feat_108    0.550646\n",
+      "feat_203    0.317554\n",
+      "feat_296    0.313175\n",
+      "feat_153    0.308799\n",
+      "feat_133    0.228983\n",
+      "feat_163    0.222107\n",
+      "feat_239    0.200532\n",
+      "feat_278    0.199002\n",
+      "Name: PC_2, dtype: float64\n",
+      "\n",
+      "PC_3 top loadings:\n",
+      "feat_109    0.345774\n",
+      "feat_214    0.333404\n",
+      "feat_86     0.310610\n",
+      "feat_21     0.274714\n",
+      "feat_155    0.262029\n",
+      "feat_145    0.227914\n",
+      "feat_162    0.210501\n",
+      "feat_110    0.201540\n",
+      "Name: PC_3, dtype: float64\n",
+      "\n",
+      "PC_4 top loadings:\n",
+      "feat_52     0.390953\n",
+      "feat_248    0.378141\n",
+      "feat_74     0.311506\n",
+      "feat_206    0.282937\n",
+      "feat_155    0.279875\n",
+      "feat_72     0.270117\n",
+      "feat_94     0.210278\n",
+      "feat_4      0.198607\n",
+      "Name: PC_4, dtype: float64\n",
+      "\n",
+      "Transformed data (first 5 rows):\n",
+      "       PC_0      PC_1      PC_2      PC_3      PC_4      PC_5      PC_6  \\\n",
+      "0 -1.777325  1.267417  0.635331  0.162262 -2.442297 -1.084380  1.788296   \n",
+      "1  1.860373 -0.330572 -0.548697  1.701199  1.904630 -2.185292 -0.164210   \n",
+      "2 -1.232541 -1.015971 -2.183152 -2.325463  0.519137 -0.267329  0.713976   \n",
+      "3  2.127533  0.566659  2.262414  1.833966 -1.478599 -0.158386 -2.307330   \n",
+      "4  0.208647  0.871363  1.918073 -0.781585 -2.110888 -0.071506 -2.201723   \n",
+      "\n",
+      "       PC_7      PC_8      PC_9  ...    PC_134    PC_135    PC_136    PC_137  \\\n",
+      "0 -0.704495 -0.600916 -0.944907  ... -2.729164  1.424789  2.654092  0.135131   \n",
+      "1 -0.332498 -0.423060 -0.157046  ... -0.005948 -1.788722  1.005498 -0.270481   \n",
+      "2 -3.059585 -1.064731 -2.476650  ... -0.039428 -0.375081 -2.837304 -2.182082   \n",
+      "3 -2.597392  3.944459 -1.418907  ... -0.769349 -1.153172 -0.895248  0.459090   \n",
+      "4 -0.445119 -3.873232 -0.505383  ...  0.000520 -1.639147 -2.538032 -0.470423   \n",
+      "\n",
+      "     PC_138    PC_139    PC_140    PC_141    PC_142    PC_143  \n",
+      "0  0.941802  0.296061 -0.726205 -1.274916 -1.719580  1.793271  \n",
+      "1  0.438763  0.260224 -0.107030  0.102345 -1.637405 -1.093733  \n",
+      "2 -0.187106 -0.953967  0.184938  1.595748 -0.007316  2.568149  \n",
+      "3 -0.361072 -0.846453  2.952684  0.191063 -1.063293 -0.142147  \n",
+      "4 -2.339735  1.368838  0.301615  1.700910  0.077962 -0.666670  \n",
+      "\n",
+      "[5 rows x 144 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import SparsePCA\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Recreate (or assume you already have) df_X\n",
+    "np.random.seed(42)\n",
+    "n_samples, n_features = 200, 300\n",
+    "X = np.random.randn(n_samples, n_features)\n",
+    "df_X = pd.DataFrame(X, columns=[f'feat_{i}' for i in range(n_features)])\n",
+    "\n",
+    "# 1) Fit SparsePCA without normalize_components\n",
+    "spca = SparsePCA(\n",
+    "    n_components=144,   # number of sparse principal components\n",
+    "    alpha=0.5,         # sparsity penalty (higher → sparser loadings)\n",
+    "    random_state=42,\n",
+    ")\n",
+    "spca.fit(df_X.values)\n",
+    "\n",
+    "# 2) Extract component loadings into a DataFrame\n",
+    "components = pd.DataFrame(\n",
+    "    spca.components_,\n",
+    "    columns=df_X.columns,\n",
+    "    index=[f'PC_{i}' for i in range(144)]\n",
+    ")\n",
+    "\n",
+    "# Print top-8 features (by absolute loading) for the first 5 PCs\n",
+    "for pc in components.index[:5]:\n",
+    "    top_feats = components.loc[pc].abs().sort_values(ascending=False).head(8)\n",
+    "    print(f\"\\n{pc} top loadings:\")\n",
+    "    print(top_feats)\n",
+    "\n",
+    "# 3) Transform the data into the 144-dimensional sparse-PC space\n",
+    "X_sp = spca.transform(df_X.values)\n",
+    "df_X_sp = pd.DataFrame(\n",
+    "    X_sp,\n",
+    "    columns=[f'PC_{i}' for i in range(144)]\n",
+    ")\n",
+    "\n",
+    "print(\"\\nTransformed data (first 5 rows):\")\n",
+    "print(df_X_sp.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3f2021e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparsePCA Reconstruction Metrics\n",
+      "---------------------------------\n",
+      "Total original variance     : 299.4894\n",
+      "Total reconstructed variance: 258.9191\n",
+      "Variance ratio (recon/orig) : 0.8645\n",
+      "Mean Squared Error          : 0.1214\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.decomposition import SparsePCA\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "X_recon = np.dot(X_sp, spca.components_)\n",
+    "\n",
+    "# Compute variance and error metrics\n",
+    "var_orig = np.var(X, axis=0).sum()\n",
+    "var_recon = np.var(X_recon, axis=0).sum()\n",
+    "variance_ratio = var_recon / var_orig\n",
+    "mse = mean_squared_error(X, X_recon)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"SparsePCA Reconstruction Metrics\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(f\"Total original variance     : {var_orig:.4f}\")\n",
+    "print(f\"Total reconstructed variance: {var_recon:.4f}\")\n",
+    "print(f\"Variance ratio (recon/orig) : {variance_ratio:.4f}\")\n",
+    "print(f\"Mean Squared Error          : {mse:.4f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d6be6a6f",
    "metadata": {},
