un-done for+ added extra on dim

--- a/dimentinoality_reduction.ipynb
+++ b/dimentinoality_reduction.ipynb
@@ -3436,7 +3436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "5abee9c3",
    "metadata": {},
    "outputs": [
@@ -3533,6 +3533,7 @@
     "    n_components=10,   # number of sparse principal components\n",
     "    alpha=1.0,         # sparsity penalty (higher → sparser loadings)\n",
     "    random_state=42,\n",
+    "    n_jobs=-1,  # use all available cores\n",
     ")\n",
     "spca.fit(df_X.values)\n",
     "\n",
@@ -3605,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "28eeef04",
    "metadata": {},
    "outputs": [
@@ -3711,6 +3712,7 @@
     "    n_components=144,   # number of sparse principal components\n",
     "    alpha=1.0,         # sparsity penalty (higher → sparser loadings)\n",
     "    random_state=42,\n",
+    "    n_jobs=-1,  # use all available cores\n",
     ")\n",
     "spca.fit(df_X.values)\n",
     "\n",
@@ -3783,7 +3785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "57f0ba93",
    "metadata": {},
    "outputs": [
@@ -3889,6 +3891,7 @@
     "    n_components=144,   # number of sparse principal components\n",
     "    alpha=0.5,         # sparsity penalty (higher → sparser loadings)\n",
     "    random_state=42,\n",
+    "    n_jobs=-1,  # use all available cores\n",
     ")\n",
     "spca.fit(df_X.values)\n",
     "\n",
@@ -3971,7 +3974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "31b4cc36",
    "metadata": {},
    "outputs": [
